# microtech

./: .gitignore  CMakeLists.txt  README.md  feedback.txt  main.cpp  templateEMP.h
cmake/: msp430.cmake
common/: Adc.hpp  Button.hpp  CMakeLists.txt  Debouncer.hpp  GPIOs.hpp  MovingAverage.hpp  Pwm.hpp  ShiftRegister.cpp  ShiftRegister.hpp  SignalGenerator.hpp  Timer.hpp  helpers.hpp
example/: CMakeLists.txt
example/signalgenerator/: CMakeLists.txt  signalgeneratorexample.cpp
exercise1/: CMakeLists.txt  exercise1.cpp
exercise2/: CMakeLists.txt  exercise2.cpp
exercise3/: CMakeLists.txt  exercise3.cpp
exercise4/: CMakeLists.txt  exercise4.cpp
exercise5/: CMakeLists.txt  exercise5.cpp
exercise6/: CMakeLists.txt  exercise6.cpp  theory.txt
exercise7/: CMakeLists.txt  exercise7.cpp
exercise8/: Button Interrupt.puml  CMakeLists.txt  Main function.puml  Option 1 - Osciloscope.puml  Processes.puml  Signal generator.puml  Timer interrupt.puml  exercise8.cpp
mock/: intrinsics.cpp  msp430g2553.cpp  templateEMP.h
src/: helpers.hpp  main.cpp
